--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Document</title>
  <!-- 1    -->
     <header id="header">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./style.css">
 <!-- 2 -->
      <img id="header-img" 
           src="test-kc.jpg"
