--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 
-    <title>KC Webpag</title>
+    <title>KC Webpage</title>
  <!-- 1    -->
     <header id="header">
         <link rel="stylesheet" href="./style.css">
